{
  "version": 4,
  "terraform_version": "1.2.8",
  "serial": 321,
  "lineage": "d9efd689-017f-2681-bfd7-740f39ef29f6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:930354804502:security-group/sg-0ff76efc9bcdf5ac0",
            "description": "public security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ff76efc9bcdf5ac0",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "private-group",
            "name_prefix": "",
            "owner_id": "930354804502",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0be862bbe59e4f7a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.terraform-task-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:930354804502:security-group/sg-0bd4251c0ab9268fe",
            "description": "public security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bd4251c0ab9268fe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "public-group",
            "name_prefix": "",
            "owner_id": "930354804502",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0be862bbe59e4f7a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.terraform-task-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "private-in-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-3688264488",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ff76efc9bcdf5ac0",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.private-group",
            "module.vpc.aws_vpc.terraform-task-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "private-in-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-1472115222",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ff76efc9bcdf5ac0",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.private-group",
            "module.vpc.aws_vpc.terraform-task-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "private-out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1649196631",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0ff76efc9bcdf5ac0",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.private-group",
            "module.vpc.aws_vpc.terraform-task-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public-in-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "http",
            "from_port": 80,
            "id": "sgrule-450317031",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bd4251c0ab9268fe",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public-group",
            "module.vpc.aws_vpc.terraform-task-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public-in-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "ssh",
            "from_port": 22,
            "id": "sgrule-2891781970",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bd4251c0ab9268fe",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public-group",
            "module.vpc.aws_vpc.terraform-task-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public-out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1706763026",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0bd4251c0ab9268fe",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public-group",
            "module.vpc.aws_vpc.terraform-task-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e2031728ef69a466",
            "arn": "arn:aws:ec2:eu-central-1:930354804502:instance/i-0c490bfab50736e9a",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c490bfab50736e9a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key-for-task",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0a0ba5005d6000f98"
              }
            ],
            "primary_network_interface_id": "eni-0a0ba5005d6000f98",
            "private_dns": "ip-10-0-2-167.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.167",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-097f5a44e28d95d8f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-006d203114db2ec26",
            "tags": {
              "Name": "private-instance-1a"
            },
            "tags_all": {
              "Name": "private-instance-1a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ff76efc9bcdf5ac0"
            ]
          },
          "dependencies": [
            "aws_security_group.private-group",
            "module.ec2_instances.aws_network_interface.private-1a",
            "module.ec2_instances.data.aws_ami.amazon-linux-2",
            "module.vpc.aws_subnet.private-subnet-1",
            "module.vpc.aws_vpc.terraform-task-vpc",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e2031728ef69a466",
            "arn": "arn:aws:ec2:eu-central-1:930354804502:instance/i-0d1733811e538d8d7",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d1733811e538d8d7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key-for-task",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0fc8849944efc4b4a"
              }
            ],
            "primary_network_interface_id": "eni-0fc8849944efc4b4a",
            "private_dns": "ip-10-0-4-117.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.117",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0aaed61b2ea7f5a0a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-090231af6ff330a92",
            "tags": {
              "Name": "private-instance-1b"
            },
            "tags_all": {
              "Name": "private-instance-1b"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ff76efc9bcdf5ac0"
            ]
          },
          "dependencies": [
            "aws_security_group.private-group",
            "module.ec2_instances.aws_network_interface.private-1b",
            "module.ec2_instances.data.aws_ami.amazon-linux-2",
            "module.vpc.aws_subnet.private-subnet-2",
            "module.vpc.aws_vpc.terraform-task-vpc",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e2031728ef69a466",
            "arn": "arn:aws:ec2:eu-central-1:930354804502:instance/i-0f6a106cc4ea4e131",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f6a106cc4ea4e131",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key-for-task",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0884121368b2001ec"
              }
            ],
            "primary_network_interface_id": "eni-0884121368b2001ec",
            "private_dns": "ip-10-0-1-5.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.5",
            "public_ip": "3.75.89.232",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-072b0c848482dd502",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-001e93eb4ba160603",
            "tags": {
              "Name": "public-instance-1a"
            },
            "tags_all": {
              "Name": "public-instance-1a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bd4251c0ab9268fe"
            ]
          },
          "dependencies": [
            "aws_security_group.public-group",
            "module.ec2_instances.aws_network_interface.public-1a",
            "module.ec2_instances.data.aws_ami.amazon-linux-2",
            "module.vpc.aws_subnet.public-subnet-1",
            "module.vpc.aws_vpc.terraform-task-vpc",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e2031728ef69a466",
            "arn": "arn:aws:ec2:eu-central-1:930354804502:instance/i-07afe203ee1cbcc75",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07afe203ee1cbcc75",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key-for-task",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-08c8c04a09f0d6dd1"
              }
            ],
            "primary_network_interface_id": "eni-08c8c04a09f0d6dd1",
            "private_dns": "ip-10-0-3-216.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.216",
            "public_ip": "18.184.8.12",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f35946170e866926",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bd90b284ecbde025",
            "tags": {
              "Name": "public-instance-1b"
            },
            "tags_all": {
              "Name": "public-instance-1b"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bd4251c0ab9268fe"
            ]
          },
          "dependencies": [
            "aws_security_group.public-group",
            "module.ec2_instances.aws_network_interface.public-1b",
            "module.ec2_instances.data.aws_ami.amazon-linux-2",
            "module.vpc.aws_subnet.public-subnet-2",
            "module.vpc.aws_vpc.terraform-task-vpc",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instances",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "private-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:930354804502:network-interface/eni-0a0ba5005d6000f98",
            "attachment": [
              {
                "attachment_id": "eni-attach-08ceeb7646e198c07",
                "device_index": 0,
                "instance": "i-0c490bfab50736e9a"
              }
            ],
            "id": "eni-0a0ba5005d6000f98",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:d7:fe:ab:e9:18",
            "owner_id": "930354804502",
            "private_ip": "10.0.2.167",
            "private_ip_list": [
              "10.0.2.167"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.2.167"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0ff76efc9bcdf5ac0"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-006d203114db2ec26",
            "tags": {
              "Name": "private-1a-network-interface"
            },
            "tags_all": {
              "Name": "private-1a-network-interface"
            }
          },
          "dependencies": [
            "aws_security_group.private-group",
            "module.vpc.aws_subnet.private-subnet-1",
            "module.vpc.aws_vpc.terraform-task-vpc",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instances",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "private-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:930354804502:network-interface/eni-0fc8849944efc4b4a",
            "attachment": [
              {
                "attachment_id": "eni-attach-08a36990f551b59bf",
                "device_index": 0,
                "instance": "i-0d1733811e538d8d7"
              }
            ],
            "id": "eni-0fc8849944efc4b4a",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:42:28:d4:c3:64",
            "owner_id": "930354804502",
            "private_ip": "10.0.4.117",
            "private_ip_list": [
              "10.0.4.117"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.4.117"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0ff76efc9bcdf5ac0"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-090231af6ff330a92",
            "tags": {
              "Name": "private-1b-network-interface"
            },
            "tags_all": {
              "Name": "private-1b-network-interface"
            }
          },
          "dependencies": [
            "aws_security_group.private-group",
            "module.vpc.aws_subnet.private-subnet-2",
            "module.vpc.aws_vpc.terraform-task-vpc",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instances",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "public-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:930354804502:network-interface/eni-0884121368b2001ec",
            "attachment": [
              {
                "attachment_id": "eni-attach-0c1dc515864141f0f",
                "device_index": 0,
                "instance": "i-0f6a106cc4ea4e131"
              }
            ],
            "id": "eni-0884121368b2001ec",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:c5:ad:d2:58:64",
            "owner_id": "930354804502",
            "private_ip": "10.0.1.5",
            "private_ip_list": [
              "10.0.1.5"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.5"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0bd4251c0ab9268fe"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-001e93eb4ba160603",
            "tags": {
              "Name": "public-1a-network-interface"
            },
            "tags_all": {
              "Name": "public-1a-network-interface"
            }
          },
          "dependencies": [
            "aws_security_group.public-group",
            "module.vpc.aws_subnet.public-subnet-1",
            "module.vpc.aws_vpc.terraform-task-vpc",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instances",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "public-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:930354804502:network-interface/eni-08c8c04a09f0d6dd1",
            "attachment": [
              {
                "attachment_id": "eni-attach-04d645850882dd269",
                "device_index": 0,
                "instance": "i-07afe203ee1cbcc75"
              }
            ],
            "id": "eni-08c8c04a09f0d6dd1",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:fd:80:a6:cd:6e",
            "owner_id": "930354804502",
            "private_ip": "10.0.3.216",
            "private_ip_list": [
              "10.0.3.216"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.3.216"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0bd4251c0ab9268fe"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bd90b284ecbde025",
            "tags": {
              "Name": "public-1b-network-interface"
            },
            "tags_all": {
              "Name": "public-1b-network-interface"
            }
          },
          "dependencies": [
            "aws_security_group.public-group",
            "module.vpc.aws_subnet.public-subnet-2",
            "module.vpc.aws_vpc.terraform-task-vpc",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05a50b771ab05627e",
            "association_id": "eipassoc-0dc312b38fd883797",
            "domain": "vpc",
            "id": "eipalloc-05a50b771ab05627e",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-05efb3f18ca9cda85",
            "private_dns": "ip-10-0-1-131.eu-central-1.compute.internal",
            "private_ip": "10.0.1.131",
            "public_dns": "ec2-3-126-100-137.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.126.100.137",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP 1a"
            },
            "tags_all": {
              "Name": "EIP 1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.IGW",
            "module.vpc.aws_vpc.terraform-task-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0977945623b3554e9",
            "association_id": "eipassoc-07489470564490df4",
            "domain": "vpc",
            "id": "eipalloc-0977945623b3554e9",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-02699b16e7b1f62e0",
            "private_dns": "ip-10-0-3-65.eu-central-1.compute.internal",
            "private_ip": "10.0.3.65",
            "public_dns": "ec2-52-28-90-172.eu-central-1.compute.amazonaws.com",
            "public_ip": "52.28.90.172",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP 1b"
            },
            "tags_all": {
              "Name": "EIP 1b"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.IGW",
            "module.vpc.aws_vpc.terraform-task-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:930354804502:internet-gateway/igw-003750e4ff231c640",
            "id": "igw-003750e4ff231c640",
            "owner_id": "930354804502",
            "tags": {
              "Name": "Internet Gateway"
            },
            "tags_all": {
              "Name": "Internet Gateway"
            },
            "vpc_id": "vpc-0be862bbe59e4f7a3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terraform-task-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05a50b771ab05627e",
            "connectivity_type": "public",
            "id": "nat-04060bebc4b8b1c5a",
            "network_interface_id": "eni-05efb3f18ca9cda85",
            "private_ip": "10.0.1.131",
            "public_ip": "3.126.100.137",
            "subnet_id": "subnet-001e93eb4ba160603",
            "tags": {
              "Name": "NAT gateway 1a"
            },
            "tags_all": {
              "Name": "NAT gateway 1a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-1a",
            "module.vpc.aws_internet_gateway.IGW",
            "module.vpc.aws_subnet.public-subnet-1",
            "module.vpc.aws_vpc.terraform-task-vpc",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0977945623b3554e9",
            "connectivity_type": "public",
            "id": "nat-06007fcc299766df8",
            "network_interface_id": "eni-02699b16e7b1f62e0",
            "private_ip": "10.0.3.65",
            "public_ip": "52.28.90.172",
            "subnet_id": "subnet-0bd90b284ecbde025",
            "tags": {
              "Name": "NAT gateway 1b"
            },
            "tags_all": {
              "Name": "NAT gateway 1b"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-1b",
            "module.vpc.aws_internet_gateway.IGW",
            "module.vpc.aws_subnet.public-subnet-2",
            "module.vpc.aws_vpc.terraform-task-vpc",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:930354804502:network-acl/acl-0ffd95e6ab9b823f0",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0ffd95e6ab9b823f0",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "930354804502",
            "subnet_ids": [
              "subnet-001e93eb4ba160603",
              "subnet-0bd90b284ecbde025"
            ],
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-0be862bbe59e4f7a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.terraform-task-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "nacl-subnet1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-045764f81b732322c",
            "network_acl_id": "acl-0ffd95e6ab9b823f0",
            "subnet_id": "subnet-001e93eb4ba160603"
          },
          "dependencies": [
            "module.vpc.aws_network_acl.main",
            "module.vpc.aws_subnet.public-subnet-1",
            "module.vpc.aws_vpc.terraform-task-vpc",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "nacl-subnet2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-02b61d2e86573e4e9",
            "network_acl_id": "acl-0ffd95e6ab9b823f0",
            "subnet_id": "subnet-0bd90b284ecbde025"
          },
          "dependencies": [
            "module.vpc.aws_network_acl.main",
            "module.vpc.aws_subnet.public-subnet-2",
            "module.vpc.aws_vpc.terraform-task-vpc",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "in-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-4238397756",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0ffd95e6ab9b823f0",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_network_acl.main",
            "module.vpc.aws_vpc.terraform-task-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "out-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-422887652",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0ffd95e6ab9b823f0",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_network_acl.main",
            "module.vpc.aws_vpc.terraform-task-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:930354804502:route-table/rtb-042b359bcbf243490",
            "id": "rtb-042b359bcbf243490",
            "owner_id": "930354804502",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04060bebc4b8b1c5a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private route table 1a"
            },
            "tags_all": {
              "Name": "Private route table 1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be862bbe59e4f7a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip-1a",
            "module.vpc.aws_internet_gateway.IGW",
            "module.vpc.aws_nat_gateway.nat-1a",
            "module.vpc.aws_subnet.public-subnet-1",
            "module.vpc.aws_vpc.terraform-task-vpc",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:930354804502:route-table/rtb-04425397db068bdba",
            "id": "rtb-04425397db068bdba",
            "owner_id": "930354804502",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06007fcc299766df8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private route table 1b"
            },
            "tags_all": {
              "Name": "Private route table 1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be862bbe59e4f7a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip-1b",
            "module.vpc.aws_internet_gateway.IGW",
            "module.vpc.aws_nat_gateway.nat-1b",
            "module.vpc.aws_subnet.public-subnet-2",
            "module.vpc.aws_vpc.terraform-task-vpc",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:930354804502:route-table/rtb-04e30d4bb98d1d263",
            "id": "rtb-04e30d4bb98d1d263",
            "owner_id": "930354804502",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-003750e4ff231c640",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public route table"
            },
            "tags_all": {
              "Name": "Public route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be862bbe59e4f7a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.IGW",
            "module.vpc.aws_vpc.terraform-task-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-1-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035d302f6a76bc828",
            "route_table_id": "rtb-042b359bcbf243490",
            "subnet_id": "subnet-006d203114db2ec26"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-1a",
            "module.vpc.aws_internet_gateway.IGW",
            "module.vpc.aws_nat_gateway.nat-1a",
            "module.vpc.aws_route_table.private-route-table-1a",
            "module.vpc.aws_subnet.private-subnet-1",
            "module.vpc.aws_subnet.public-subnet-1",
            "module.vpc.aws_vpc.terraform-task-vpc",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-2-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ed194adbe0c5a57",
            "route_table_id": "rtb-04425397db068bdba",
            "subnet_id": "subnet-090231af6ff330a92"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-1b",
            "module.vpc.aws_internet_gateway.IGW",
            "module.vpc.aws_nat_gateway.nat-1b",
            "module.vpc.aws_route_table.private-route-table-1b",
            "module.vpc.aws_subnet.private-subnet-2",
            "module.vpc.aws_subnet.public-subnet-2",
            "module.vpc.aws_vpc.terraform-task-vpc",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-1-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07af5fec6377bce21",
            "route_table_id": "rtb-04e30d4bb98d1d263",
            "subnet_id": "subnet-001e93eb4ba160603"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.IGW",
            "module.vpc.aws_route_table.public-route-table",
            "module.vpc.aws_subnet.public-subnet-1",
            "module.vpc.aws_vpc.terraform-task-vpc",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-2-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02cba9993acfcf177",
            "route_table_id": "rtb-04e30d4bb98d1d263",
            "subnet_id": "subnet-0bd90b284ecbde025"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.IGW",
            "module.vpc.aws_route_table.public-route-table",
            "module.vpc.aws_subnet.public-subnet-2",
            "module.vpc.aws_vpc.terraform-task-vpc",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:930354804502:subnet/subnet-006d203114db2ec26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-006d203114db2ec26",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "930354804502",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "10.0.2.0/24-eu-central-1a"
            },
            "tags_all": {
              "Name": "10.0.2.0/24-eu-central-1a"
            },
            "vpc_id": "vpc-0be862bbe59e4f7a3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terraform-task-vpc",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:930354804502:subnet/subnet-090231af6ff330a92",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090231af6ff330a92",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "930354804502",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "10.0.4.0/24-eu-central-1b"
            },
            "tags_all": {
              "Name": "10.0.4.0/24-eu-central-1b"
            },
            "vpc_id": "vpc-0be862bbe59e4f7a3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terraform-task-vpc",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:930354804502:subnet/subnet-001e93eb4ba160603",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-001e93eb4ba160603",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "930354804502",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "10.0.1.0/24-eu-central-1a"
            },
            "tags_all": {
              "Name": "10.0.1.0/24-eu-central-1a"
            },
            "vpc_id": "vpc-0be862bbe59e4f7a3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terraform-task-vpc",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:930354804502:subnet/subnet-0bd90b284ecbde025",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd90b284ecbde025",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "930354804502",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "10.0.3.0/24-eu-central-1b"
            },
            "tags_all": {
              "Name": "10.0.3.0/24-eu-central-1b"
            },
            "vpc_id": "vpc-0be862bbe59e4f7a3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terraform-task-vpc",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform-task-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:930354804502:vpc/vpc-0be862bbe59e4f7a3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06b2edfe060090161",
            "default_route_table_id": "rtb-045a4e38140a23434",
            "default_security_group_id": "sg-0854c4bfe8598ae70",
            "dhcp_options_id": "dopt-0a37cd2994c86e677",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0be862bbe59e4f7a3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-045a4e38140a23434",
            "owner_id": "930354804502",
            "tags": {
              "Name": "terraform-task-vpc"
            },
            "tags_all": {
              "Name": "terraform-task-vpc"
            }
          }
        }
      ]
    }
  ]
}